# qr-barcode-generator

./: .gitignore  DRAFT.md  LICENSE  README.md  app.py  core.py  create_icon.py  csv_import.py  generators.py  main.py  pyproject.toml
.github/workflows/: release.yml
tests/: test_app.py  test_core.py  test_csv_import.py  test_generators.py
