[project]
name = "qr-barcode-gui"
version = "1.13.1"
description = "QR コード / バーコード生成 GUI ツール"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-barcode>=0.16.1",
    "segno>=1.6",
    "Pillow>=10.0",
    "tkeasygui>=1.0.42",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
